# project-backend

./: .env.example  README.md  pyproject.toml
app/: config.py  main.py  models.py
app/generation/: context.py  pipeline.py  sources.py
app/ingest/: parsers.py  pipeline.py
app/retrieval/: retrieval.py
app/routes/: ingest.py  query.py
app/storage/: base.py  vector_db.py
scripts/: bulk_ingest.py
